[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Victor Romano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.110.1"}
requests = "^2.31.0"
aiohttp = "^3.9.4"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
